--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 body {
   background-color: hsl(257, 40%, 49%);
   background-image: url("images/bg-desktop.svg");
+  background-repeat: no-repeat;
 }
 
 h1 {
@@ -34,12 +35,17 @@ p {
   padding: 50px;
   margin: 0 auto;
   width: 80%;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-box{
+  display: flex;
+  flex-direction: row;
 }
 
 .contenant {
   display: inline-block;
-  position: absolute;
 }
 
 .mockup {
@@ -51,17 +57,16 @@ p {
   color: hsl(257, 40%, 49%);
   background-color: white;
   border-radius: 40px;
-  padding: 15px 60px;
+  padding: 15px 50px;
   text-decoration: none;
+  text-align: center;
   margin-top: 30px;
   display: inline-block;
 }
 
 .social {
-  right: 0;
-  bottom: 50px;
-  position: absolute;
-  display: inline-block;
+  text-align: right;
+  margin-top: 50px;
 }
 
 .img-soc {
@@ -70,24 +75,37 @@ p {
   margin: 0 5px;
 }
 
-@media only screen and (max-width: 775px) {
-  .container {
-    text-align: center;
+@media screen and (max-width: 750px) {
+  body {
+    background-image: url("images/bg-mobile.svg");
   }
-
   h1 {
-    font-size: 1.6em;
+    font-size: 1.4rem;
   }
 
   p {
-    font-size: 1em;
+    font-size: 0.8rem;
   }
 
-  .contenant {
-  margin: 0 auto;
+  .logo{
+    width: 40%;
+  }
+
+  .container {
+    width: 100%;
+    text-align: center;
+  }
+
+  .flex-box{
+    flex-direction: column;
+  }
+
+  .social {
+    text-align: center;
   }
 
   .mockup {
     width: 100%;
   }
+
 }
